# OpenGL

./: .gitignore  CMakeLists.txt  README.md
shaders/: fragment.glsl  vertex.glsl
src/: Shader.cpp  Shader.h  Utils.h  includes.h  main.cpp
src/core/: Camera.cpp  Camera.h  Image.cpp  Image.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Utils.h
src/core/camera/: Camera.cpp  Camera.h
src/core/io/: Joystick.cpp  Joystick.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/shaders/: fragment.glsl  vertex.glsl
